--- a/blog/templates/blog/base.html
+++ b/blog/templates/blog/base.html
@@ -12,7 +12,7 @@
     {% if title %}
         <title>Django blog -{{title}}</title>
     {% else %}
-    <title>Django blog </title>
+    <title>User Posts</title>
     {% endif %}
 </head>
 <body>
