--- a/blog/templates/blog/about.html
+++ b/blog/templates/blog/about.html
@@ -1,5 +1,5 @@
 {% extends "blog/base.html" %}
 
 {% block content %}
-    <h1>about django project</h1>
+    <h1> A SMALL PROJECT USERS AND THEIR POSTS DONE BY DJANGO </h1>
 {% endblock content %}
