added developers of project

--- a/blog/templates/blog/about.html
+++ b/blog/templates/blog/about.html
@@ -2,4 +2,5 @@
 
 {% block content %}
     <h1> A SMALL PROJECT USERS AND THEIR POSTS DONE BY DJANGO </h1>
+    <small style="color: grey;">Developed by ABRAHAM LINCOLN and PAVAN KUMAR </small>
 {% endblock content %}
