Added link of polls app

--- a/blog/templates/blog/base.html
+++ b/blog/templates/blog/base.html
@@ -27,6 +27,7 @@
               <div class="navbar-nav mr-auto">
                 <a class="nav-item nav-link" href="/">Home</a>
                 <a class="nav-item nav-link" href="/about">About</a>
+                <a class="nav-item nav-link" href="/polls">Polls</a>
               </div>
               <!-- Navbar Right Side -->
               <div class="navbar-nav">
