--- a/blog/templates/blog/base.html
+++ b/blog/templates/blog/base.html
@@ -47,7 +47,7 @@
       
       <main role="main" class="container">
         <div class="row">
-          <div class="col-md-8">
+          <div class="col-md-8 col-sm-8 col-xs-8">
             {% if messages %}
               {% for message in messages %}
               <div class="alert alert-{{message.tags}}">{{message}}</div>
@@ -55,7 +55,7 @@
             {% endif %}
             {% block content %}{% endblock %}
           </div>
-          <div class="col-md-4">
+          <div class="col-md-4 col-sm-4 col-xs-4">
             <div class="content-section">
               <h3>Our Sidebar</h3>
               <p class='text-muted'>You can put any information here you'd like.
