--- a/blog/templates/blog/base.html
+++ b/blog/templates/blog/base.html
@@ -28,6 +28,7 @@
                 <a class="nav-item nav-link" href="/">Home</a>
                 <a class="nav-item nav-link" href="/about">About</a>
                 <a class="nav-item nav-link" href="/polls">Polls</a>
+                <a class="nav-item nav-link" href="/chat">chat</a>
               </div>
               <!-- Navbar Right Side -->
               <div class="navbar-nav">
