--- a/blog/templates/blog/about.html
+++ b/blog/templates/blog/about.html
@@ -1,6 +1,4 @@
-{% extends "blog/base.html" %}
-
-{% block content %}
-    <h1> A SMALL PROJECT USERS AND THEIR POSTS DONE BY DJANGO </h1>
-    <small style="color: grey;">Developed by ABRAHAM LINCOLN and PAVAN KUMAR </small>
+{% extends "blog/base.html" %} {% block content %}
+<h1>A SMALL PROJECT USERS AND THEIR POSTS DONE BY DJANGO</h1>
+<small style="color: grey;">Developed by AMITH REDDY MAADA</small>
 {% endblock content %}
